--- a/deployments/nginx-cache.conf
+++ b/deployments/nginx-cache.conf
@@ -9,17 +9,21 @@ server {
     server_name  localhost;
     root   /usr/share/nginx/html;
     charset utf-8;
-   
-    proxy_cache my_cache;
-    proxy_cache_revalidate on;
-    proxy_ignore_headers Set-Cookie;
-    proxy_ignore_headers X-Accel-Expires;
-    proxy_ignore_headers Expires;
-#   proxy_ignore_headers Cache-Control;
-    proxy_cache_valid 200 30d;
-    proxy_ssl_server_name on;
 
     location / {
+        proxy_pass http://tstp:3000/;
+    }
+
+    location /dbrest/ {
+        proxy_cache my_cache;
+        proxy_cache_revalidate on;
+        proxy_ignore_headers Set-Cookie;
+        proxy_ignore_headers X-Accel-Expires;
+        proxy_ignore_headers Expires;
+    #   proxy_ignore_headers Cache-Control;
+        proxy_cache_valid 200 30d;
+        proxy_ssl_server_name on;
+
         proxy_pass https://v5.db.transport.rest/;
         access_log /var/log/nginx/access.log  cachelog;
     }
