--- a/ui/package.json
+++ b/ui/package.json
@@ -21,6 +21,7 @@
 		"simple-svelte-autocomplete": "^2.5.2",
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
+		"sveltekit-i18n": "^2.2.2",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^4.2.0"
