--- a/ui/nginx.conf
+++ b/ui/nginx.conf
@@ -2,7 +2,7 @@ server {
     server_name localhost;
     root /usr/share/nginx/html/;
     location / {
-        try_files $uri /200.html;
+        try_files $uri /tstp.html;
     }
 
 }
