--- a/ui/nginx.conf
+++ b/ui/nginx.conf
@@ -1,7 +1,7 @@
 server {
     server_name localhost;
     root /usr/share/nginx/html/;
-    location / {
+    location /tstp {
         try_files $uri /tstp.html;
     }
 
