--- a/deployments/conf.example.env
+++ b/deployments/conf.example.env
@@ -1,5 +1,4 @@
 API_CACHE_HOST=tstp-proxy
 API_CACHE_SCHEME=http
 HAFAS_API_CACHE_PREFIX=/dbrest/
-DBOPEN_API_CACHE_PREFIX=/
-DBOPEN_API_ACCESS_TOKEN=
+STOST_API_URL=http://localhost:1234
