move discard of same-group footpaths to frontend, hide tsd, fix soft 404, usability, styling

--- a/ui/nginx.conf
+++ b/ui/nginx.conf
@@ -2,7 +2,7 @@ server {
     server_name localhost;
     root /usr/share/nginx/html/;
     location /tstp {
-        try_files $uri /tstp.html;
+        rewrite ^/tstp?$ /tstp.html;
     }
 
 }
